[tool.poetry]
name = "use_mkdocs"
version = "0.1.0"
description = ""
authors = ["alex-mint <holzeimer@mail.de>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
