[tool.poetry]
name = "use_mkdocs"
version = "0.1.1"
description = "website for https://autohomestack.de/"
authors = ["alex-mint <holzeimer@mail.de>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
mkdocs-material = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
